--- a/.gitignore
+++ b/.gitignore
@@ -93,6 +93,12 @@ crashlytics-build.properties
 /[Bb]uilds/
 /[Ll]ogs/
 /[Mm]emoryCaptures/
+[Ll]ibrary/
+[Tt]emp/
+[Oo]bj/
+[Bb]uild/
+[Bb]uilds/
+Assets/AssetStoreTools*
 ./src/Temp
 ./src/Library
 ./src/obj
